--- a/src/dlt_pipelines.ipynb
+++ b/src/dlt_pipelines.ipynb
@@ -62,9 +62,11 @@
    "source": [
     "@dlt.table\n",
     "def joined_data():\n",
+    "    from pyspark.sql.functions import col\n",
+    "\n",
     "    df = (dlt.read(\"ingest_data\").alias(\"s\")\n",
-    "    .join(dlt.read(\"raw_data\").alias(\"u\"), \"s.station_id=u.station_id\", \"inner\")\n",
-    "    .selectExpr(\"s.station_id\", \"s.name\", \"s.lat\", \"s.long\", \"s.dockcount\", \"s.landmark\", \"u._metadata\")\n",
+    "    .join(dlt.read(\"raw_data\").alias(\"u\"), col(\"s.station_id\") == col(\"u.station_id\"), \"inner\")\n",
+    "    .selectExpr(\"s.station_id\", \"s.name\", \"s.lat\", \"s.long\", \"s.dockcount\", \"s.landmark\")\n",
     "    )\n",
     "\n",
     "    return df"
